k8s/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-web
spec:
  selector:
    matchLabels:
      run: nginx-web
  replicas: 1
  template:
    metadata:
      labels:
        run: nginx-web
    spec:
      containers:
      - name: nginx-web
        image: knmkonexion/nginx-web:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-web
  labels:
    run: nginx-web
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    run: nginx-web
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-web
spec:
  rules:
  - http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-web
            port:
              number: 80
